--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE HTML>
-
-{% load staticfiles %}
-
-<html>
-    
-    <head>
-        <title>Rango</title>
-    </head>
-    
-    <body>
+	{% extends 'rango/base.html' %}
+	{% load staticfiles %}
+	{% block title_block %}
+		Index
+	{% endblock %}
+	{% block body_block %}
         <h1>Rango says...</h1>
         <div>
-			hey there partner! 
+			{% if user.is_authenticated %}
+				howdy {{ user.username }}!
+			{% else %}
+				hey there partner!
+			{% endif %}
 		</div>	
 		<div>
 			<div>
@@ -49,8 +48,12 @@
 		
         <a href="/rango/about/">About Rango</a><br />
         <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
+
 	</div>
+	 {% if user.is_authenticated %}
 	<a href="/rango/add_category/">Add a New Category</a><br />
+	{% endif %}
     </body>
 
 </html>
+	{% endblock %}
